--- a/src/index.css
+++ b/src/index.css
@@ -17,8 +17,9 @@ code {
 }
 
 .g-card-image {
-  border-radius: 10 px;
   width: 300px;
+  cursor: pointer;
+  border-radius: 25px;
   height: 480px;
   box-shadow: 0px 0px 3px 1px #ccc;
 }
