--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-
+/* 
 
 .App {
   text-align: center;
@@ -40,8 +40,8 @@
 }
 
 .images__homepage{
-  /* padding: 0px 140px; */
+   padding: 0px 140px; 
   align-items: center;
   justify-content: center;
   display: flex;
-}
+} */
