--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -24,3 +24,11 @@
   border-radius: 20px;
   font-size: 40px;
 }
+
+@media only screen and (max-device-width: 480px) {
+  .contact__header{
+   font-size: x-large;
+   margin-right: 20%;
+  }
+
+}
