--- a/src/css/home.css
+++ b/src/css/home.css
@@ -12,3 +12,16 @@
   background-color: white;
   word-wrap: break-word;
 }
+
+@media only screen and (max-device-width: 480px) {
+  #homeText__div{
+   font-size: x-large;
+   padding-right: 20px;
+   color: black;
+  margin: 5%;
+  margin-bottom: 5%;
+  font-family: monospace;
+  word-wrap: break-word;
+  }
+
+}
