--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 .home__completeDiv {
   padding: 2%;
 }
@@ -24,7 +26,7 @@
   word-wrap: break-word;
   }
   .typewriter {
-    font-family: Courier, monospace;
+    font-family: Bebas Neue, monospace;
   }
 
   .typewriter-text {
@@ -36,7 +38,7 @@
 }
 
 .typewriter {
-  font-family: Courier, monospace;
+  font-family: Bebas Neue, monospace;
 display: inline-block;
 }
 
