--- a/src/css/navBar.css
+++ b/src/css/navBar.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 #navBar__div {
   box-shadow: -9px 10px 8px 7px #ccc;
   border-radius: 25px;
