--- a/src/css/card.css
+++ b/src/css/card.css
@@ -1,5 +1,8 @@
 .card__div {
+  display: inline-block;
+  flex-direction: row;
   margin: 100px;
+  margin-left: 14rem;
 
 }
 
@@ -29,4 +32,26 @@
 
 .card__aTag {
   color: black;
+}
+
+@media only screen and (max-device-width: 480px) {
+  .click__div {
+   padding: -20rem;
+  }
+  .card__div {
+   margin-right: 10rem;
+   padding: -10rem;
+   margin: 7rem;
+   display:flex !important;
+  }
+  
+  .card__img {
+    margin-right: 1rem;
+    margin-bottom: 2rem;
+    width: 100px;
+    height: 100px;
+  }
+  .card__a{
+    margin-right: 10rem;
+  }
 }
