--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,7 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
 .home__completeDiv {
   padding: 2%;
+}
+
+.home__img {
+  height: 30rem;
+  width: 40rem;
+  margin-left: 15rem;
+  margin-top: 5rem;
+  border-radius: 5rem;
+}
+
+.home__h4 {
+  margin-left: 30rem;
+  margin-top: 5rem;
+  margin-bottom: -9rem;
 }
 
 .home__div {
@@ -16,14 +30,14 @@
 }
 
 @media only screen and (max-device-width: 480px) {
-  #homeText__div{
-   font-size: x-large;
-   padding-right: 20px;
-   color: black;
-  margin: 5%;
-  margin-bottom: 5%;
-  font-family: monospace;
-  word-wrap: break-word;
+  #homeText__div {
+    font-size: x-large;
+    padding-right: 20px;
+    color: black;
+    margin: 5%;
+    margin-bottom: 5%;
+    font-family: monospace;
+    word-wrap: break-word;
   }
   .typewriter {
     font-family: Bebas Neue, monospace;
@@ -35,18 +49,31 @@
     height: 5rem;
   }
 
+  .home__img {
+    height: 10rem;
+    width: 10rem;
+    margin-left: 2rem;
+    margin-top: 5rem;
+    border-radius: 5rem;
+  }
+
+  .home__h4 {
+    margin-left: 3rem;
+    margin-top: 5rem;
+    margin-bottom: -9rem;
+  }
 }
 
 .typewriter {
   font-family: Bebas Neue, monospace;
-display: inline-block;
+  display: inline-block;
 }
 
 .typewriter-text {
   display: inline-block;
   overflow: hidden;
   letter-spacing: 2px;
- animation: typing 5s steps(30, end), blink .75s step-end infinite;
+  animation: typing 5s steps(30, end), blink 0.75s step-end infinite;
   white-space: nowrap;
   font-size: 30px;
   font-weight: 700;
@@ -55,19 +82,20 @@ display: inline-block;
 }
 
 @keyframes typing {
-  from { 
-      width: 0% 
+  from {
+    width: 0%;
   }
-  to { 
-      width: 100% 
+  to {
+    width: 100%;
   }
 }
 
 @keyframes blink {
-  from, to { 
-      border-color: transparent 
+  from,
+  to {
+    border-color: transparent;
   }
-  50% { 
-      border-color: orange; 
+  50% {
+    border-color: orange;
   }
 }
