--- a/src/css/project.css
+++ b/src/css/project.css
@@ -1,7 +1,7 @@
-/* This is for fonts */
+/* this is for fonts only */
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap");
 
-/* start off css */
+/* standard setup css */
 * {
   box-sizing: border-box;
   padding: 0;
@@ -38,23 +38,11 @@ img {
   width: 100%;
 }
 
-/* icons */
-#about p{
-  max-width: 500px;
-}
-.icons {
-  padding: 20px;
+
+.cases img:hover {
+  opacity: 0.7;
 }
 
-.icons h3 {
-  font-weight: bold;
-  margin-bottom: 15px;
-}
-
-.icons i {
-  background-color: rgb(131, 205, 224);
-  color: #fff;
-  padding: 1rem;
-  border-radius: 50%;
-  margin-bottom: 15px;
+.team img {
+  /* border-radius: 50%; */
 }
