--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -23,6 +23,17 @@
   outline-color: rosybrown;
 }
 
+.callback-form textarea {
+  width: 100%;
+  padding: 4px;
+  height: 40px;
+  border: #f5f5f5 1px solid;
+}
+
+.callback-form textarea:focus {
+  outline-color: rosybrown;
+}
+
 .callback-form .btn {
   padding: 12px 0;
   margin-top: 20px;
