--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+
+.contact h2{
+  font-family: 'Permanent Marker', cursive;
+}
+
 .callback-form {
   width: 100%;
   padding: 20px 0;
