--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,5 +1,5 @@
 /* this is only to get fonts from google fonts */
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap");
 
 body {
   font-family: "Open Sans", sans-serif;
@@ -52,6 +52,7 @@ img {
 
 .hero .content h1 {
   font-size: 55px;
+  font-family: "Permanent Marker", cursive;
 }
 
 .hero .content p {
