--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   background: #fff;
   color: #333;
   line-height: 1.6;
