--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -1,5 +1,5 @@
 /* just for fonts */
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Faustina:wght@300&display=swap');
 
 /* css code to start off with  */
 * {
@@ -9,7 +9,6 @@
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
   background: #fff;
   color: #333;
   line-height: 1.6;
@@ -182,4 +181,9 @@ img {
   flex: 25%;
   max-width: 25%;
   padding: 0 4px;
+}
+
+.home {
+  font-family: 'Faustina', serif;
+  font-size: large;
 }
